--- a/package.json
+++ b/package.json
@@ -1,16 +1,40 @@
 {
-  "name": "harmony-music-academy",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "test": "vitest"
-  },
-  "dependencies": {
-    "astro": "^5.16.0",
-    "vitest": "^3.2.4"
-  }
+	"name": "harmony-music-academy",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"test": "vitest",
+		"lint": "biome check --write .",
+		"format": "biome format --write .",
+		"format:astro": "prettier --write \"**/*.astro\"",
+		"tidy": "npm run lint && npm run format:astro"
+	},
+	"dependencies": {
+		"@astrojs/react": "^4.4.2",
+		"@tailwindcss/vite": "^4.1.17",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"astro": "^5.16.0",
+		"gsap": "^3.13.0",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"sonner": "^2.0.7",
+		"tailwindcss": "^4.1.17",
+		"vitest": "^3.2.4",
+		"zod": "^3.25.76"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.7",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.19",
+		"prettier": "3.6.2",
+		"prettier-plugin-astro": "0.14.1",
+		"prettier-plugin-tailwindcss": "0.7.1",
+		"tailwindcss-animate": "^1.0.7",
+		"tsx": "^4.20.6"
+	}
 }
