--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"lint": "biome check --write .",
 		"format": "biome format --write .",
 		"format:astro": "prettier --write \"**/*.astro\"",
-		"tidy": "npm run lint && npm run format:astro"
+		"tidy": "npm run lint && npm run format:astro",
+    "commit": "cz"
 	},
 	"dependencies": {
 		"@astrojs/react": "^4.4.2",
@@ -30,12 +31,21 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.7",
+		"@commitlint/cli": "^20.1.0",
+		"@commitlint/config-conventional": "^20.0.0",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
+		"commitizen": "^4.3.1",
+		"cz-conventional-changelog": "^3.3.0",
 		"prettier": "3.6.2",
 		"prettier-plugin-astro": "0.14.1",
 		"prettier-plugin-tailwindcss": "0.7.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tsx": "^4.20.6"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	}
 }
