chore(husky): add hooks and update tooling

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"lint": "biome check --write .",
 		"format": "biome format --write .",
 		"format:astro": "prettier --write \"**/*.astro\"",
+		"biome:staged": "biome check --write --staged",
 		"tidy": "npm run lint && npm run format:astro",
-    "commit": "cz"
+		"commit": "cz",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@astrojs/react": "^4.4.2",
@@ -37,6 +39,7 @@
 		"@tailwindcss/typography": "^0.5.19",
 		"commitizen": "^4.3.1",
 		"cz-conventional-changelog": "^3.3.0",
+		"husky": "^9.1.7",
 		"prettier": "3.6.2",
 		"prettier-plugin-astro": "0.14.1",
 		"prettier-plugin-tailwindcss": "0.7.1",
