chore(config): update project config, tooling, formatting, and TypeScript settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,11 @@
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 
-	"cSpell.words": ["gsap"]
+	"[css]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+
+	"[html]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+
+	"cSpell.words": ["describedby", "gsap", "sonner"]
 }
