--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**", "!**/*.astro"]
+		"includes": ["**", "!**/*.astro", "!**/global.css"]
 	},
 	"formatter": {
 		"enabled": true,
