--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
 		"astro": "^5.16.0",
+		"canvas-confetti": "^1.9.4",
 		"gsap": "^3.13.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
@@ -36,6 +37,7 @@
 		"@commitlint/cli": "^20.1.0",
 		"@commitlint/config-conventional": "^20.0.0",
 		"@tailwindcss/typography": "^0.5.19",
+		"@types/canvas-confetti": "^1.9.0",
 		"commitizen": "^4.3.1",
 		"cz-conventional-changelog": "^3.3.0",
 		"husky": "^9.1.7",
