--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@astrojs/react": "^4.4.2",
+		"@astrojs/vercel": "^9.0.2",
 		"@sentry/astro": "^10.27.0",
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/react": "^19.2.7",
