--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"gsap": "^3.13.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"resend": "^6.6.0",
 		"sonner": "^2.0.7",
 		"tailwindcss": "^4.1.17",
 		"vitest": "^3.2.4",
