feat(observability): configure Sentry sourcemap upload and add admin-guarded test email route

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,10 @@ pnpm-debug.log*
 
 # environment variables
 .env
-.env.production
+.env.*
+
+# Vercel local project metadata (never commit)
+.vercel/
 
 # macOS-specific files
 .DS_Store
