--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"format:astro": "prettier --write \"**/*.astro\"",
 		"biome:staged": "biome check --write --staged",
 		"tidy": "npm run lint && npm run format:astro",
-		"commit": "cz",
+		"commit": "czg",
 		"prepare": "husky"
 	},
 	"dependencies": {
@@ -43,18 +43,12 @@
 		"@commitlint/config-conventional": "^20.0.0",
 		"@tailwindcss/typography": "^0.5.19",
 		"@types/canvas-confetti": "^1.9.0",
-		"commitizen": "^4.3.1",
-		"cz-conventional-changelog": "^3.3.0",
+		"czg": "^1.12.0",
 		"husky": "^9.1.7",
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "0.14.1",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tsx": "^4.20.6"
-	},
-	"config": {
-		"commitizen": {
-			"path": "./node_modules/cz-conventional-changelog"
-		}
 	}
 }
