--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
 	},
 	"dependencies": {
 		"@astrojs/react": "^4.4.2",
-		"@astrojs/vercel": "^9.0.2",
 		"@sentry/astro": "^10.27.0",
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
+		"@vercel/routing-utils": "^5.3.1",
 		"astro": "^5.16.6",
 		"canvas-confetti": "^1.9.4",
 		"gsap": "^3.13.0",
@@ -38,6 +38,7 @@
 		"zod": "^3.25.76"
 	},
 	"devDependencies": {
+		"@astrojs/vercel": "^9.0.2",
 		"@biomejs/biome": "2.3.7",
 		"@commitlint/cli": "^20.1.0",
 		"@commitlint/config-conventional": "^20.0.0",
