fix(tooling): added explict formatter for javascript and typescript files to fix prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,10 @@
 
 	"[html]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
 
+	"[javascript]": { "editor.defaultFormatter": "biomejs.biome" },
+	"[javascriptreact]": { "editor.defaultFormatter": "biomejs.biome" },
+	"[typescript]": { "editor.defaultFormatter": "biomejs.biome" },
+	"[typescriptreact]": { "editor.defaultFormatter": "biomejs.biome" },
+
 	"cSpell.words": ["describedby", "gsap", "sonner"]
 }
